# renamescreenshots

./: .gitignore  .swiftlint.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Package.swift  README.md  README_SWIFTLINT.md  SWIFTLINT_ISSUES.md  SWIFTLINT_SUMMARY.md  TODO.md  appcast.xml  claude-history.txt  index.html  install_launch_agent.sh  privacy-review.md  pyproject.toml  rename-ui.sh  requirements.txt  uninstall_launch_agent.sh
.claude/: settings.local.json
.github/ISSUE_TEMPLATES_SWIFTLINT/: README.md  create-all-issues.sh  issue-1-line-length.md  issue-2-large-tuple.md  issue-3-trailing-commas.md  issue-4-parameter-alignment.md
.github/workflows/: auto-tag.yml  codeql.yml  deploy-docs.yml  release-main.yml  release-tag.yml  swift.yml  swiftlint.yml
ScreenshotRenamer/: .gitignore  BUILD.md  Package.swift  README.md  SWIFT_PORT_SUMMARY.md  build-app.sh
ScreenshotRenamer/ScreenshotRenamer/: main.swift
ScreenshotRenamer/ScreenshotRenamerTests/: FileValidatorTests.swift
Scripts/: build-app.sh  bump-version.sh  generate-changelog.sh  generate-icon.swift  inject-version.sh  install-hooks.sh  pre-commit  release.sh  test-rename.swift
Tests/ScreenshotRenamerTests/: DebugLoggerTests.swift  FileValidatorTests.swift  LaunchAtLoginManagerTests.swift  PatternMatcherTests.swift  ScreenshotDetectorTests.swift  ScreenshotRenamerTests.swift  ScreenshotWatcherTests.swift  ShellExecutorTests.swift
docs/: index.html
src/: cli.py  macos_settings.py  menubar_app.py  rename_screenshots.py  streamlit_app.py  watcher.py  web_app.py
src/templates/: index.html
tests/: test_cli.py  test_macos_settings.py  test_pattern_builder.py  test_rename_screenshots.py  test_security.py  test_watcher.py  test_web_app.py
(+28 files in other folders)
