[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "screenshot-renamer"
version = "1.0.0"
description = "A macOS utility to rename screenshot files to sortable format"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Chris Tirpak", email = "tpak@users.noreply.github.com"}
]
keywords = ["screenshot", "rename", "macos", "utility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=3.0.0",
    "flask-wtf>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
screenshot-rename = "src.cli:main"
screenshot-rename-web = "src.web_app:main"

[project.urls]
Homepage = "https://github.com/tpak/renamescreenshots"
Repository = "https://github.com/tpak/renamescreenshots"
Issues = "https://github.com/tpak/renamescreenshots/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[tool.setuptools.package-data]
src = ["templates/*.html", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
